--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
+    "node-sass": "^4.13.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
-    "react-test-renderer": "^16.9.0"
+    "react-test-renderer": "^16.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
